# FastMassSpring

./: .gitignore  CMakeLists.txt  FastMassSpring.sln  readme.md
ClothApp/: ClassDiagram.cd  ClothApp.vcxproj  ClothApp.vcxproj.filters  GridFiller.cpp  GridFiller.h  MassSpringSolver.cpp  MassSpringSolver.h  MassSpringSystem.cpp  MassSpringSystem.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UserInteraction.cpp  UserInteraction.h  app.cpp
ClothApp/shaders/: basic.vshader  phong.fshader  pick.fshader
